--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 /* width : 1320px */
 /* 패딩 양옆으로 20px, 컨텐츠는 1280px */
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&family=Poppins:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&family=Poppins:wght@400;500;600&display=swap");
+/* Poppins 400=Regular , 500=Medium , 600=SemiBold */
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  line-height: 1;
 }
 
 a {
@@ -19,8 +21,8 @@ ul {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
-  /* font-family: "Poppins", sans-serif; */
+  font-family: "Poppins", sans-serif;
+  /* font-family: "Montserrat", sans-serif; */
   color: #111;
   font-size: 16px;
 }
@@ -31,6 +33,7 @@ body {
   margin: 0 auto;
 }
 
+/* header */
 .header {
   height: 120px;
   display: flex;
@@ -41,13 +44,12 @@ body {
 
 .nav {
   display: flex;
-  font-family: "Poppins", sans-serif;
 }
 
 .nav li a {
   display: inline-block;
   margin-right: 30px;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .top_menu {
@@ -55,6 +57,7 @@ body {
 }
 
 .top_menu li:last-child a {
+  margin-left: 40px;
 }
 
 .logo {
@@ -62,4 +65,129 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+/* visual */
+
+.visual .center_box {
+  position: relative;
+  height: 728px;
+  background-image: url("/images/main_visual.png");
+  background-repeat: no-repeat;
+  background-position: center right;
+}
+
+.visual .center_box .details {
+  position: absolute;
+  bottom: 100px;
+  left: 20px;
+}
+
+.visual .center_box .details h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 60px;
+  font-weight: 800;
+}
+
+.visual .center_box .details p {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+  margin-top: 16px;
+  margin-bottom: 18px;
+}
+
+.visual .center_box .details button {
+  width: 256px;
+  height: 64px;
+  background-color: #111;
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+}
+
+.visual .center_box .details .photo {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/* product_01 */
+.product_01 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.product_01 li {
+  width: 632px;
+  height: 642px;
+  background-color: #111;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  position: relative;
+}
+
+.product_01 img {
+  position: absolute;
+  left: 216px;
+  bottom: 40px;
+}
+
+.product_01 li h2 {
+  font-size: 40px;
+  font-weight: 800;
+  position: absolute;
+  top: 50px;
+  left: 48px;
+}
+
+.product_01 li a span {
+  font-size: 30px;
+  font-weight: 500;
+  position: absolute;
+  bottom: 38px;
+  left: 48px;
+}
+
+/* product_new */
+.product_new {
+  height: 506px;
+  margin-top: 130px;
+}
+
+.product_new h2 {
+  margin-bottom: 26px;
+}
+
+.product_new ul {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  padding-bottom: 60px;
+}
+
+.product_new ul li img {
+  width: 306px;
+  height: 306px;
+  background-color: #ddd;
+}
+
+.product_new ul li .item {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 28px;
+}
+
+.product_new ul li .price {
+  font-size: 18px;
+}
+
+.product_new ul::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 7px;
+  background-color: #c4c4c4;
 }
