--- a/css/main.css
+++ b/css/main.css
@@ -52,12 +52,20 @@ body {
   font-weight: 500;
 }
 
+.nav li a:hover {
+  text-decoration: underline;
+}
+
 .top_menu {
   display: flex;
 }
 
 .top_menu li:last-child a {
   margin-left: 40px;
+}
+
+.top_menu li a:hover {
+  text-decoration: underline;
 }
 
 .logo {
@@ -68,7 +76,6 @@ body {
 }
 
 /* visual */
-
 .visual .center_box {
   position: relative;
   height: 728px;
@@ -106,10 +113,10 @@ body {
   color: #fff;
 }
 
-.visual .center_box .details .photo {
-  position: absolute;
-  top: 0;
-  right: 0;
+.visual .center_box .details button:hover {
+  font-size: 24px;
+  font-weight: 600;
+  text-decoration: underline;
 }
 
 /* product_01 */
@@ -149,40 +156,56 @@ body {
   left: 48px;
 }
 
-/* product_new */
-.product_new {
+/* product_new, product_top */
+.product_new,
+.product_top {
   height: 506px;
   margin-top: 130px;
 }
 
-.product_new h2 {
+.product_new h2,
+.product_top h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  line-height: 40px;
   margin-bottom: 26px;
 }
 
-.product_new ul {
+.product_new ul,
+.product_top ul {
   display: flex;
   justify-content: space-between;
   position: relative;
-  padding-bottom: 60px;
+  padding-bottom: 64px;
 }
 
-.product_new ul li img {
+.product_new ul li img,
+.product_top ul li img {
   width: 306px;
   height: 306px;
   background-color: #ddd;
 }
 
-.product_new ul li .item {
+.product_new ul li .item,
+.product_top ul li .item {
   font-size: 18px;
   font-weight: 600;
   line-height: 28px;
 }
 
-.product_new ul li .price {
+.product_new ul li .price,
+.product_top ul li .price {
   font-size: 18px;
+  line-height: 28px;
 }
 
-.product_new ul::after {
+.product_new ul li a:hover,
+.product_top ul li a:hover {
+  text-decoration: underline;
+}
+
+.product_new ul::after,
+.product_top ul::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -190,4 +213,107 @@ body {
   width: 100%;
   height: 7px;
   background-color: #c4c4c4;
+}
+
+/* infos */
+.infos {
+  margin-top: 136px;
+}
+
+.infos_box {
+  width: 300px;
+  height: 240px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 150px;
+}
+
+.infos_box h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 40px;
+  font-weight: 800;
+  margin-bottom: 10px;
+}
+
+.infos_box p {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+  margin-bottom: 30px;
+}
+
+.infos_box button {
+  font-size: 18px;
+  font-weight: 500;
+  width: 254px;
+  height: 64px;
+  background-color: #fff;
+  color: #111;
+}
+
+.infos_box button:hover {
+  font-size: 24px;
+  font-weight: 600;
+  text-decoration: underline;
+}
+
+.infos_box button:hover {
+  text-decoration: underline;
+}
+
+/* footer */
+.footer {
+  height: 410px;
+  background-color: #111;
+}
+
+.footer .center_box .footer_menu .footer_text_box {
+  display: flex;
+  padding-top: 106px;
+  justify-content: space-between;
+}
+
+.footer .center_box .footer_menu .footer_text_box li {
+  width: 200px;
+}
+
+.footer .center_box .footer_menu .footer_text_box h2,
+.sns .text {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 30px;
+  color: #fff;
+  opacity: 25%;
+}
+
+.footer .center_box .footer_menu .footer_text_box li ul li a {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 30px;
+  color: #fff;
+}
+
+.footer .center_box .footer_menu .footer_text_box li ul li a:hover {
+  text-decoration: underline;
+}
+
+.footer .center_box .footer_menu {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sns {
+  padding-top: 106px;
+}
+
+.sns .imgs img {
+  margin-top: 10px;
+  margin-right: 16px;
+}
+
+.footer .center_box .copyright {
+  font-size: 10px;
+  color: #fff;
+  opacity: 50%;
+  margin-top: 100px;
 }
